# StealthFreedom

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  meson.build  meson_options.txt  release-plz.toml  stealth_freedom.doap  typos.toml
.github/workflows/: cd.yml  ci.yml
build-aux/: io.github.StealthFreedom.StealthFreedom.Devel.json
data/: io.github.StealthFreedom.StealthFreedom.desktop.in.in  io.github.StealthFreedom.StealthFreedom.gschema.xml.in  io.github.StealthFreedom.StealthFreedom.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: window.blp
po/: POTFILES.in  stealth_freedom.pot
src/: application.rs  main.rs  window.rs
