[package]
name = "stealth_freedom"
version = "0.1.0-alpha.0"
description = "Get untraceable access to the Internet without censorship"
authors = ["ewokthepreparer <ewokthepreparer@proton.me>"]
edition = "2021"
license = "MIT"
publish = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"

[profile.release]
lto = true
strip = true

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = [
    "v1_4",
    "gtk_v4_12",
] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { version = "0.8.0", package = "gtk4", features = ["gnome_45"] }
indoc = "2.0.7"
itertools = "0.14.0"
os-release-rs = "0.1.0"
sysinfo = "0.33.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
